[gd_scene load_steps=5 format=1]

[ext_resource path="res://Scenes/UI/TitleFlash.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/pixel_large_white.fnt" type="BitmapFont" id=2]
[ext_resource path="res://Assets/Fonts/pixel_med_white.fnt" type="BitmapFont" id=3]

[sub_resource type="Animation" id=1]

resource/name = "flash"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.1, 1 ), "transitions":FloatArray( 1, 14.9285, 1 ), "update":0, "values":[ 0.0, 1.0, 0.0 ] }

[node name="TitleFlash" type="Container"]

visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 500.0
margin/bottom = 80.0
script/script = ExtResource( 1 )

[node name="MainLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -250.0
margin/top = -15.0
margin/right = 250.0
margin/bottom = 15.0
custom_fonts/font = ExtResource( 2 )
text = "BEGIN!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SubLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -250.0
margin/top = 41.0
margin/right = 250.0
margin/bottom = 86.0
custom_fonts/font = ExtResource( 3 )
text = "ANOTHER"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/flash = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_finished"]


